; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html_smartypants.c_smartypants_cb__squote.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html_smartypants.c_smartypants_cb__squote.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i32 }
%struct.smartypants_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.buf*, %struct.smartypants_data*, i32, i32*, i64)* @smartypants_cb__squote to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @smartypants_cb__squote(%struct.buf* %0, %struct.smartypants_data* %1, i32 %2, i32* %3, i64 %4) #0 {
  %6 = alloca %struct.buf*, align 8
  %7 = alloca %struct.smartypants_data*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store %struct.buf* %0, %struct.buf** %6, align 8
  store %struct.smartypants_data* %1, %struct.smartypants_data** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load %struct.buf*, %struct.buf** %6, align 8
  %12 = load %struct.smartypants_data*, %struct.smartypants_data** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32*, i32** %9, align 8
  %15 = load i64, i64* %10, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = call i64 @smartypants_squote(%struct.buf* %11, %struct.smartypants_data* %12, i32 %13, i32* %14, i64 %15, i32* %16, i32 1)
  ret i64 %17
}

declare dso_local i64 @smartypants_squote(%struct.buf*, %struct.smartypants_data*, i32, i32*, i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
